Fix transaction list layout when there is no scrollbar visible

--- a/app/components/wallet/home/WalletTransactionsList.scss
+++ b/app/components/wallet/home/WalletTransactionsList.scss
@@ -4,7 +4,7 @@
 .component {
   margin-top: 20px;
   height: calc(100% - 80px);
-  overflow-y: auto;
+  overflow-y: scroll;
   margin-right: -20px;
 
   &::-webkit-scrollbar {
